# upgraderr

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  upgraderr
.github/workflows/: publish_image.yaml
app/: __main__.py  arr_client.py  notifications.py  settings.py
app/arr/: base.py  radarr.py  sonarr.py
app/db/: __init__.py
app/db/migrations/: env.py
app/db/migrations/versions/: cde571893a43_initialize.py
upgraderr/: __init__.py  __main__.py  arr_client.py  settings.py
upgraderr/db/: __init__.py
upgraderr/db/migrations/: env.py
upgraderr/db/migrations/versions/: 0bd6d72b9382_initialize.py  7ab3ae647632_initialize.py  7b038231cc43_initialize.py  8dbcffbb922c_initialize.py  cde571893a43_initialize.py  dfe39ae74442_initialize.py
